cmake_minimum_required(VERSION 3.10.3)
project(cit66FInalProj)

set(CMAKE_CXX_STANDARD 17)




add_executable(cit66FInalProj main.cpp player.cpp player.h Wizard.cpp Wizard.h Paladin.cpp Paladin.h Rogue.cpp Rogue.h Enemy.cpp Enemy.h Indian_Power_Rangers.cpp Indian_Power_Rangers.h Elder_Cunningham.cpp Elder_Cunningham.h)

