cmake_minimum_required(VERSION 3.10.3)
project(cit66FInalProj)

set(CMAKE_CXX_STANDARD 17)




add_executable(cit66FInalProj main.cpp player.cpp player.h Wizard.cpp Wizard.h Paladin.cpp Paladin.h Rogue.cpp Rogue.h Enemy.cpp Enemy.h Joseph_Stalin.cpp Joseph_Stalin.h Salem_Darkmore.h Salem_Darkmore.cpp Items.h Items.cpp Medicine.h Medicine.cpp Problem.cpp Problem.h Shop.cpp Shop.h Orcs.cpp Orcs.h fight.cpp fight.h Gunslinger.cpp Gunslinger.h)

